<resources>
    <string name="app_name">Quex</string>
    <string name="login">LOG IN</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="account_name">Profile name</string>
    <string name="account_text">Profile description</string>
    <string name="create">Create</string>
    <string name="register">Don\'t have an account ? Then register</string>
    <string name="enter">Do you have an account ? Then login</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="update">Güncelle</string>
    <string name="delete">Sil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_btn">Update</string>
    <string name="update_text">Text</string>
</resources>