<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pieces.Create">

    <TextView
        android:id="@+id/enter_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/create"
        app:layout_constraintStart_toStartOf="@+id/create"
        app:layout_constraintTop_toBottomOf="@+id/create" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autoSizeTextType="uniform"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/account_name"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/plain_text"
        android:hint="@string/account_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/account_profile"
        app:layout_constraintStart_toStartOf="@+id/account_profile"
        app:layout_constraintTop_toBottomOf="@+id/account_profile"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/account_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/plain_text"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/account_text"
        app:layout_constraintStart_toStartOf="@+id/account_text"
        app:layout_constraintTop_toBottomOf="@+id/account_text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/account_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/plain_text"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/account_email"
        app:layout_constraintStart_toStartOf="@+id/account_email"
        app:layout_constraintTop_toBottomOf="@+id/account_email"
        tools:ignore="RtlSymmetry,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/enter_button"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/account_password"
        app:layout_constraintStart_toStartOf="@+id/account_password"
        app:layout_constraintTop_toBottomOf="@+id/account_password" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/picture_background"
        app:civ_border_color="@color/white"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="@+id/create_account"
        app:layout_constraintStart_toStartOf="@+id/create_account"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />

    <EditText
        android:id="@+id/account_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/plain_text"
        android:ems="10"
        android:hint="@string/account_text"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/account_name"
        app:layout_constraintStart_toStartOf="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@+id/account_name"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>